fixed runner to execute the CLI cucumber